cf-setup/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sensor-data-java-proto-grpc-ingress
  namespace: sensor-data-java-proto-grpc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.protocol: h2c
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sensor-data-java-proto-grpc-grpc-ingress-service
                port:
                  number: 3000
